# sturdy-couscous

./: .env_template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  config.py  database.py  docker-compose.yml  docker-entrypoint.sh  init.sql  main.py  pyproject.toml  requirements.txt
alembic_migrations/: env.py
api/: config.py  database.py  gen.py  main.py  main_old.py  models_nosql.py  models_sql.py  recommendation_system.py
auth/: database.py
backend/: admin.py  alembic.ini  init_db.py  main.py  pyproject.toml
backend/api_v1/auth/: auth.py  exceptions.py  router.py  schemas.py
backend/api_v1/communities/: dao.py  exceptions.py  models_sql.py  router.py  schemes.py  utilities.py
backend/api_v1/external_integration/: dao.py  dependencies.py  exceptions.py  models_sql.py  router.py  schemas.py  utilities.py
backend/api_v1/feed/: router.py  schemas.py  utilities.py
backend/api_v1/games/: dao.py  enums.py  models_nosql.py  models_sql.py  router.py  schemas.py
backend/api_v1/posts/: dao.py  models_nosql.py  models_sql.py  router.py  schemas.py  utilities.py
backend/api_v1/rating_service/: rating_router.py  rating_service.py
backend/api_v1/recom_sys/: rating_service.py  recommendation_router.py  recommendation_service.py  router.py  schemas.py  system.py
backend/api_v1/recomendation_system/: rs.py
backend/api_v1/recommendation_system/: calc_utils.py  dao.py  models.py  router.py  rs.py  schemas.py  utilities.py
backend/api_v1/users/: dao.py  dependencies.py  enums.py  exceptions.py  models_nosql.py  models_sql.py  rating_service.py  recommendation_system.py  router.py  schemas.py  users_enums.py
backend/core/: config.py  dao.py  database_mongo.py  database_s3.py  database_sql.py  qeries.py  utilities.py
backend/micro_rs/protos/proto/rs/: rs.proto
backend/migration/: env.py
backend/migration/versions/: 0cc994a372d8_.py  1836466476ef_.py  28cdf0793589_.py  2c1c01720b32_deleted_userweights_table.py  411ae19af9e8_.py  464048642e9e_init.py  47ee67203a3a_table_renamed.py  622ec1c0790a_changed_some_fields.py  6e7c1495c4f2_init.py  6ec6b916be0f_init.py  731244567102_.py  771f2e70a579_.py  78983d389bf5_.py  79acc7c7acd9_.py  93baa790e50f_.py  abe14fdd7f58_.py  ad5f264e889d_.py  ad735344860d_.py  ae92d3437c01_.py  af68ff1320c9_.py  b19edea76ea1_.py  ce37b0572f53_.py  cee4df78b125_ffff.py  d0fe957b8afa_.py  dc29324e3b03_init.py  e1085c6360fd_.py  e30e0514a84f_.py  e6c296e48f9b_.py  ea341f23d7fb_init.py  fcd49a128656_.py
backend/redis/: cache.py
core/: database.py
frontend/: Dockerfile  nginx.conf  package-lock.json
models/: models.py
(+17 files in other folders)
